добавил модификатор _short

--- a/src/page/headers-and-footers/headers-and-footers.pug
+++ b/src/page/headers-and-footers/headers-and-footers.pug
@@ -43,5 +43,5 @@ html(lang="ru")
           emailInputPlaceholder: "Email",
           logoId: "footer-logo-1-id"
         })
-      .headers-and-footers__item
+      div(class="headers-and-footers__item  headers-and-footers__item_short")
         +footer({ isShort: true, logoId: "footer-logo-2-id" })
