обновил id у ссылки о нас

--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -4,7 +4,7 @@ include ../main-menu/main-menu
 
 -
   const menuItems = [
-    { id: "aboutUsRus", title: "О нас", path: "/404.html" },
+    { id: "aboutUs", title: "О нас", path: "/404.html" },
     { 
       id: "productsRus",
       title: "Услуги",
