добавил отображение currentPage о нас

--- a/src/page/headers-and-footers/headers-and-footers.pug
+++ b/src/page/headers-and-footers/headers-and-footers.pug
@@ -23,7 +23,7 @@ html(lang="ru")
     .headers-and-footers__wrap
       .headers-and-footers__item
         +header({
-          currentPageId: "homeEng",
+          currentPageId: "aboutUs",
           mainMenuId: "firstMainMenu",
           burgerBtnId: "firstBurgerBtn",
           authListId: "firstAuthList",
@@ -32,7 +32,7 @@ html(lang="ru")
         })
       div(class="headers-and-footers__item  headers-and-footers__item_authorized")
         +header({
-          currentPageId: "homeEng",
+          currentPageId: "aboutUs",
           userName: "Юлий Цезарь",
           mainMenuId: "secondMainMenu",
           burgerBtnId: "secondBurgerBtn",
