--- a/src/components/auth-card/auth-card.scss
+++ b/src/components/auth-card/auth-card.scss
@@ -13,8 +13,7 @@
   }
 
   .button_with-icon {
-    padding: 15px 20px;
-    padding-top: 14px;
+    padding: 14px 20px 15px;
     width: 100%;
     font-weight: normal;
   }
