--- a/src/components/date-wishes/date-wishes.scss
+++ b/src/components/date-wishes/date-wishes.scss
@@ -20,8 +20,7 @@
 
   .button {
     margin-top: 31px;
-    padding: 15px 20px;
-    padding-top: 14px;
+    padding: 14px 20px 15px;
     display: block;
     box-sizing: border-box;
     width: 100%;
