--- a/src/components/auth-card/auth-card.scss
+++ b/src/components/auth-card/auth-card.scss
@@ -52,6 +52,6 @@
   margin-top: 30px;
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: center;
   font-family: Montserrat, Quicksand, Arial, sans-serif;
 }
