--- a/src/components/auth-card/auth-card.pug
+++ b/src/components/auth-card/auth-card.pug
@@ -12,4 +12,5 @@ mixin authCard()
         +button({ title: "Войти", isHaveIcon: true, buttonType: "submit" })
       .auth-card__account-enter
         p Нет аккаунта на Toxin?
-        +button({ path: "/registration.html", title: "Создать",  isEmptyStyle: true })
+        .auth-card__registr-btn-wrap
+          +button({ path: "/registration.html", title: "Создать",  isEmptyStyle: true, isLowLarger: true })
