--- a/src/components/date-wishes/date-wishes.pug
+++ b/src/components/date-wishes/date-wishes.pug
@@ -42,5 +42,6 @@ mixin dateWishes()
         +button({
           title: "Подобрать номер",
           isHaveIcon: true,
+          isZeroZIndex: true,
           buttonType: "submit"
         })
