#8 добавил модификатор static

--- a/src/components/date-picker/date-picker.scss
+++ b/src/components/date-picker/date-picker.scss
@@ -49,6 +49,11 @@
     backface-visibility: hidden;
     perspective: 1000px;
   }
+
+  &_static {
+    position: static;
+    margin: 0;
+  }
 }
 
 .date-picker__wrap {
