#8 удалил переопределение стилей date-pickerа из других компонентов

--- a/src/components/date-wishes/date-wishes.pug
+++ b/src/components/date-wishes/date-wishes.pug
@@ -28,7 +28,7 @@ mixin dateWishes()
               placeholder: "ДД.ММ.ГГГГ",
               isDarkPlaceholder: true
             })
-            div(id="date-picker-container" class="date-picker-container")
+            div(id="date-picker-container" class="date-picker-container  date-wishes__date-picker-container")
           +input({
             id: "number-guests-input",
             isFakeInput: true,
