--- a/src/page/rooms/rooms.pug
+++ b/src/page/rooms/rooms.pug
@@ -202,7 +202,7 @@ block content
               placeholder: "Выберите дату",
               isBigLabel: true
             })
-            div(id="date-picker-container" class="date-picker-container")
+            div(id="date-picker-container" class="date-picker-container  rooms-page__date-picker-container")
           .filter__item
             +input({
               id: "number-guest",
