--- a/src/components/date-wishes/date-wishes.scss
+++ b/src/components/date-wishes/date-wishes.scss
@@ -40,6 +40,10 @@
   display: flex;
   justify-content: space-between;
 
+  @media (max-width: 380px) {
+    flex-direction: column;
+  }
+
   .input-group__input {
     &_double-button {
       width: 106px;
@@ -50,18 +54,12 @@
     }
   }
 
-  .date-picker-container {
-    position: absolute;
+  .date-wishes__date-picker-container {
     top: 269px;
-    left: 0;
 
     @media (max-width: 380px) {
       top: 348px;
     }
-  }
-
-  @media (max-width: 380px) {
-    flex-direction: column;
   }
 }
 
