--- a/src/page/room-details/room-details.pug
+++ b/src/page/room-details/room-details.pug
@@ -82,4 +82,4 @@ block content
             section.room-details__info
               h2.room-details__title Отмена
               p Бесплатная отмена в течение 48 ч. После этого при отмене не позднее чем за 5 дн. до прибытия вы получите полный возврат за вычетом сбора за услуги.
-      +totalCard()
+      +totalCard({ datePickerContainerCLass: 'room-details__date-picker-container' })
