#8 добавил модификатор для ячейки date-picker

--- a/src/components/date-picker/date-picker.scss
+++ b/src/components/date-picker/date-picker.scss
@@ -152,6 +152,10 @@
     color: transparentize($contentColor, .75);
   }
 
+  &_lower {
+    height: 32px;
+  }
+
   @media (max-width: 320px) {
     height: 30px;
   }
