--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -158,6 +158,11 @@
       }
     }
   }
+
+  &_wider-label {
+    width: 60px;
+  }
+
   /* stylelint-disable */
   img {
     /* stylelint-enable */
