--- a/src/components/auth-card/auth-card.pug
+++ b/src/components/auth-card/auth-card.pug
@@ -7,7 +7,8 @@ mixin authCard()
       form(action="/404.html")
         h2.auth-card__title Войти
         fieldset.auth-card__fieldset
-          +input({ id: "Email2", placeholder: "Email",  type: "email", })
+          .auth-card__input-wrap
+            +input({ id: "Email2", placeholder: "Email",  type: "email", })
           +input({ id: "pass2", placeholder: "Пароль",  type: "password", })
         +button({ title: "Войти", isHaveIcon: true, buttonType: "submit" })
       .auth-card__account-enter
