--- a/src/components/date-wishes/date-wishes.pug
+++ b/src/components/date-wishes/date-wishes.pug
@@ -8,31 +8,38 @@ mixin dateWishes()
         fieldset.date-wishes__fieldset
           legend.date-wishes__title Найдём номера под ваши пожелания
           .date-wishes__group
-            +input({
-              id: "arrival-input",
-              splitId: "arrival-split-btn",
-              labelName: "Прибытие",
-              isButtonSplit: true,
-              isDownSplitAnimation: true,
-              iconSrc: "expand-more.svg",
-              placeholder: "ДД.ММ.ГГГГ",
-              isDarkPlaceholder: true
-            })
-            +input({
-              id: "departure-input",
-              splitId: "departure-split-btn",
-              labelName: "Выезд",
-              isButtonSplit: true,
-              isDownSplitAnimation: true,
-              iconSrc: "expand-more.svg",
-              placeholder: "ДД.ММ.ГГГГ",
-              isDarkPlaceholder: true
-            })
+            .date-wishes__input-wrap
+              +input({
+                id: "arrival-input",
+                splitId: "arrival-split-btn",
+                labelName: "Прибытие",
+                isBigLabel: true,
+                isWiderLabel: true,
+                isButtonSplit: true,
+                isDownSplitAnimation: true,
+                iconSrc: "expand-more.svg",
+                placeholder: "ДД.ММ.ГГГГ",
+                isDarkPlaceholder: true
+              })
+            .date-wishes__input-wrap  
+              +input({
+                id: "departure-input",
+                splitId: "departure-split-btn",
+                labelName: "Выезд",
+                isBigLabel: true,
+                isWiderLabel: true,
+                isButtonSplit: true,
+                isDownSplitAnimation: true,
+                iconSrc: "expand-more.svg",
+                placeholder: "ДД.ММ.ГГГГ",
+                isDarkPlaceholder: true
+              })
             div(id="date-picker-container" class="date-picker-container  date-wishes__date-picker-container")
           +input({
             id: "number-guests-input",
             isFakeInput: true,
             labelName: "Гости",
+            isBigLabel: true,
             isButtonSplit: true,
             isDownSplitAnimation: true,
             isHaveIcon: true,
